--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,8 @@
 #the mongodb connection string should be put here
-MONGODB_URL=Connection string here
+MONGODB_URL=Connection_string_here
 
 #Port number for the server
 PORT=5000
+
+#your secret key from stripe website https://stripe.com/en-nl
+STRIPE_SECRET_KEY=secret_key_here
