--- a/client/package.json
+++ b/client/package.json
@@ -65,5 +65,8 @@
     "react-map-gl": "^6.1.18",
     "react-phone-number-input": "^3.1.44",
     "react-router-dom": "^6.0.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
